fixed choices.js overflow and position issue

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -607,7 +607,7 @@ section {
 .services .icon-box {
   padding: 30px;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   border-radius: 10px;
   margin: 0 10px 40px 10px;
   background: #fff;
